5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1593_1806.log
== TEST (2019-03-28 10:20:54) 
-- CODE:
from math import*

nump = int(input("numero de pessoas")) 
prob = 1 - (factorial(365) / factorial(365 - nump)) * (1 / 365**nump) 

primt(round(prob,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    primt(round(prob,2))
NameError: name 'primt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:21:09) 
-- CODE:
from math import*

nump = int(input("numero de pessoas")) 
prob = 1 - (factorial(365) / factorial(365 - nump)) * (1 / 365**nump) 

print(round(prob,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:21:21) 
-- CODE:
from math import*

nump = int(input("numero de pessoas")) 
prob = 1 - (factorial(365) / factorial(365 - nump)) * (1 / 365**nump) 

print(round(prob,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:25:16) 
-- CODE:
from math import*

nump = int(input("numero de pessoas")) 
p = 1 - (factorial(365) / factorial(365 - nump)) * (1 / 365**nump) 
prob = p*100
print(round(prob,2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:25:23) 
-- CODE:
from math import*

nump = int(input("numero de pessoas")) 
p = 1 - (factorial(365) / factorial(365 - nump)) * (1 / 365**nump) 
prob = p*100
print(round(prob,2))
-- EXECUTION TIME:
0.138475
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
